feat(web): create dashboard page layout

--- a/frontend/src/components/Input/Input.module.css
+++ b/frontend/src/components/Input/Input.module.css
@@ -43,4 +43,8 @@
     color: var(--color-text-complement);
 }
 
-.input-block ::placeholder { opacity: 0; }
+.input-stacked ::placeholder {
+    color: #A7AEBE;
+    transition: inherit;
+    opacity: 0;
+}
