fix(web): input component appearance

--- a/frontend/src/pages/Login/Login.module.css
+++ b/frontend/src/pages/Login/Login.module.css
@@ -44,6 +44,8 @@
     gap: 3rem;
 }
 
+.login-container input::placeholder { color: transparent; }
+
 .login-container .toggle {
     position: absolute;
 
